# ocr

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  SPEC.md  TODO.md
examples/: create_test_images.rs  font_sizes.rs  font_styles.rs  generate_test_images.rs  ocr_demo.rs  simple_ocr_test.rs  system_font.rs  test_ocr.rs
src/: lib.rs  main.rs
src/api/: config.rs  error.rs  image.rs  mod.rs  ocr.rs  text.rs
src/cli/: mod.rs
src/cli/commands/: batch.rs  benchmark.rs  check.rs  extract.rs  helpers.rs  info.rs  layout.rs  list_languages.rs  makebox.rs  mod.rs  pdf.rs  train.rs  validate.rs
src/compute/: mod.rs
src/core/: config.rs  engine.rs  geometry.rs  image.rs  layout.rs  mod.rs  output.rs  recognition.rs  text.rs
src/domain/: ioc.rs  mod.rs
src/domain/config/: mod.rs  service.rs
src/domain/image_processing/: mod.rs  service.rs
src/domain/language_processing/: mod.rs  service.rs
src/domain/output_formatting/: mod.rs  service.rs
src/domain/text_recognition/: mod.rs  service.rs
src/image/: dewarp.rs  enhancement.rs  font_analysis.rs  mod.rs  pipeline.rs  processor.rs  quality.rs  super_resolution.rs  thresholder.rs
src/lang/: cjk.rs  detector.rs  dictionary.rs  mod.rs  ngram.rs  osd.rs  unicharset.rs  unicode.rs
src/layout/: analyzer.rs  classifier.rs  column_detector.rs  detection_cnn.rs  detector.rs  form_extractor.rs  line_detector.rs  mod.rs  tests_advanced.rs  text_line_features.rs  text_ordering.rs  union_find_ccl.rs
src/onnx/: mod.rs
src/pdf/: mod.rs
src/recognition/: basic_ocr.rs  cnn_model.rs  confidence.rs  crnn.rs  ctc_decoder.rs  end_to_end_model.rs  engine.rs  font_attributes.rs  hybrid_model.rs  lstm.rs  lstm_model.rs  mod.rs  pattern.rs  pattern_model.rs  tesseract_blob.rs  tesseract_features.rs  tesseract_textline.rs  tests_recognition.rs  transformer_model.rs  vit_model.rs
src/server/: mod.rs
src/synthetic/: benchmark.rs  bitmap_font.rs  distortion.rs  document_generator.rs  generator.rs  mod.rs  multi_script.rs  template_trainer.rs
src/training/: augmentation.rs  checkpoint.rs  config.rs  crnn_trainer.rs  data.rs  losses.rs  metrics.rs  mod.rs  optimizers.rs  training.rs
src/utils/: async_utils.rs  error.rs  hash.rs  math.rs  mod.rs  quantization.rs  simd.rs  simd_advanced.rs  time.rs
tests/: README.md  basic_tests.rs  cli_tests.rs  integration_tests.rs  ocr_test.rs  round_trip_test.rs  snapshot_tests.rs  test_images_benchmark.rs  test_images_test.rs  test_web_api.rs
tests/snapshots/: snapshot_tests__cjk_character_detection_snapshot.snap  snapshot_tests__cjk_language_detection_snapshot.snap  snapshot_tests__cjk_mixed_script_snapshot.snap  snapshot_tests__cjk_text_segmentation_snapshot.snap  snapshot_tests__geometry_types_snapshot.snap  snapshot_tests__model_configuration_snapshot.snap  snapshot_tests__model_type_device_combinations_snapshot.snap  snapshot_tests__recognition_result_snapshot.snap  snapshot_tests__text_structures_snapshot.snap
